[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-mod-guard"
version = "0.1.1"
description = "Read-only safety checker for downloaded game mods and mod archives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dragon Lady" }
]
keywords = [
  "mods",
  "game-mods",
  "security",
  "malware",
  "scanner",
  "farming-simulator",
  "american-truck-simulator",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Dragon-Lady/game-mod-guard"
Repository = "https://github.com/Dragon-Lady/game-mod-guard"
Issues = "https://github.com/Dragon-Lady/game-mod-guard/issues"

[project.scripts]
game-mod-guard = "game_mod_guard:main"

[tool.setuptools]
py-modules = ["game_mod_guard"]
